--- a/converter.html
+++ b/converter.html
@@ -1,4 +1,3 @@
-#Test file  
 <html>
   <head>
     <title>Unit Converter</title>
@@ -9,7 +8,7 @@
 
     <style>
         body{
-	background-color:#3a3a3a;
+	background-color:#ffffff;
 }
 
 .container{
