--- a/converter.html
+++ b/converter.html
@@ -145,8 +145,8 @@ input {
 	<input type="number" style="display: none" placeholder="Enter a number" >
 
 	 <div class="metricImperial">
-	   <button id="toMetric" style="display:none">Imperial to metric</button>
-	   <button id="toImperial" style="display:none">Metric to imperial</button>
+	   <button id="toMetric" style="display:none">Imperial zu Metrisch</button>
+	   <button id="toImperial" style="display:none">Metrisch zu Imperial</button>
 	 </div>
 	 <div class="temp-unit-buttons">
 	   <button id="toCelsius" style="display:none">Celsius</button>
@@ -155,11 +155,11 @@ input {
 	 </div>
 	 <div class="speed-units">
 	   <button id="mileToKm" style="display:none">mph</button>
-	   <button id="kmToMile" style="display:none">km/hr</button>
+	   <button id="kmToMile" style="display:none">km/h</button>
 	 </div>
 	 <div class="time-units">
-	   <button id="hours" style="display:none">Hours</button>
-	   <button id="days" style="display:none">Days</button>
+	   <button id="hours" style="display:none">Stunden</button>
+	   <button id="days" style="display:none">Tage</button>
 	 </div>
 	 </div>
     </div>
