--- a/converter.html
+++ b/converter.html
@@ -142,7 +142,7 @@ input {
             <button id="temperature" title="Temperature"><i class="fa fa-thermometer-2 fa-2x"></i></button>
       
             </div>
-	<input type="number" style="display: none" placeholder="Enter a number" >
+	<input type="number" style="display: none" placeholder="Trage eine Zahl ein" >
 
 	 <div class="metricImperial">
 	   <button id="toMetric" style="display:none">Imperial zu Metrisch</button>
