--- a/converter.html
+++ b/converter.html
@@ -177,7 +177,7 @@ input {
   
    </div>
    <script >
-
+<center>
 
 let input = document.querySelector('input');
 let output = document.getElementById('output');
@@ -484,7 +484,7 @@ const timeUnits = {
 };
 
 
-
+</center>
 
    </script>
   </body>
